@@ -43,6 +43,7 @@
         @if?CheckAuthCode?AUTH_CMDCOMPONENTS=true@
 		  <TR><TD><a href="javascript:Clicked('/grinder/components.cmvp');"><FONT COLOR=WHITE SIZE=-1><B>Skill Components</B></FONT></A></TD></TR>
 		@endif@
+        <TR><TD><a href="javascript:Clicked('/grinder/recipes.cmvp');"><FONT COLOR=WHITE SIZE=-1><B>Skill Recipes</B></FONT></A></TD></TR>
         <TR><TD><a href="javascript:Refresh();"><FONT COLOR=WHITE SIZE=-1><B>Refresh Page</B></FONT></A></TD></TR>
         </TABLE>
     </TD>
@@ -65,15 +66,19 @@
     @AbilityNext?ALL&GENERIC@
         @if?CheckReqParm?ABILITY=GenAbility&||ABILITY=GenLanguage&||ABILITY=GenCraftSkill@
         @else@
+        @if?CheckReqParm?ABILITY=GenLanguage&||ABILITY=GenCraftSkill&||ABILITY=GenAbility@
+        @else@
+        @if?CheckReqParm?ABILITY=GenCraftSkill&||ABILITY=GenAbility&||ABILITY=GenLanguage@
+        @else@
             <TR>
             <TD><a href="javascript:Ability('@AbilityID@','')"><FONT COLOR=WHITE><B>@AbilityID@</B></FONT></a></TD>
             <TD><FONT COLOR=WHITE><B>@AbilityName@</B></FONT></a></TD>
             <TD><FONT COLOR=WHITE><B>@AbilityData?TYPENDOMAIN@</B></FONT></a></TD>
             <TD><FONT COLOR=WHITE><B>@AbilityData?QUALITY@</B></FONT></a></TD>
             <TD><FONT COLOR=WHITE><B>@AbilityData?TRIGSTR@</B></FONT></a></TD>
-            
-            
             </TR>
+       @endif@
+       @endif@
        @endif@
     @back@
     <TR>
